--- a/css.css
+++ b/css.css
@@ -5,17 +5,18 @@
     color: #ffffff;
 }
 .wrapper{
-    background-color: #121116;
+    background-color: #191919;
+}
+.paper{
+    height: 420px;
+    background-color: #0A080F;
+    width: 100vw;
+    margin: 300px auto;
 }
 .footer{
     width: 1200px;
     height: 420px;
-    background-color: gray;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+    margin: 0 auto;
 }
 .main-logo{
 text-align: center;
@@ -54,8 +55,11 @@ padding-top: 120px;
     font-weight: 600;
     color: #ffffff;
     font-size: 15px;
-    padding-top: 86px;
+    padding-top: 75px;
 }
 .copyright__aqua{
     color: #19c8fa;
+}
+.logos__img:hover{
+    border: 1px solid black;
 }
